--- a/app/views/cars/smonth.html.erb
+++ b/app/views/cars/smonth.html.erb
@@ -1,17 +1,18 @@
 <% provide(:title, 'График') %>
 
-	<% if @fl == 1%>	
+	<% if @broni_today.count != 0 then %>	
 		<h4 style="color: blue" align="center">Брони в работу на сегодня</h4>
+		<small>
+		<div class="table-responsive">	
 		<table id="b1" class="table table-bordered table-condensed table-hover">
 			<thead>
-				<tr>
+				<tr class="info">
 					<th>No</th>
 					<th>Автомобиль</th>
-					<th>Дата начала</th>
-					<th>Время начала</th>
-					<th>Дата окончания</th>
-					<th>Время окончания</th>
+					<th>Клиент</th>
 					<th>Агент</th>
+					<th width="12%">Начало</th>
+					<th width="12%">Конец</th>
 					<th>Пробег</th>
 					<th>Гарантийная сумма</th>
 					<th>Сумма договора</th>
@@ -19,46 +20,43 @@
 				</tr>
 			</thead>
 			<tbody>			
-				<% @cars.each do |mobil| %>
-					<% mobil.contracts.each do |con|%>		
-						<% if con.order_date.to_date == Date.today.to_date %>
-						    <% if con.flag == 1%>
-						        <%= form_tag '/rez_to_contract' do %>
-									<tr>
-									<td><%= con.id %></td>
-									<td><%= mobil.marca + " " + mobil.gnum%></td>
-									<td><%= Date.today.to_date.strftime("%d.%m.%Y") %></td>
-									<td><%= text_field_tag 'sttime', Time.now.strftime('%R') %></td>
-									<td><%= text_field_tag 'enddate', con.diff %></td>
-									<td><%= text_field_tag 'endtime', Time.now.strftime('%R') %></td>
-									<td><%= con.user %></td>
-									<td><a style="color: red"><%= text_field_tag 'wlong', if mobil.wlongs.last then mobil.wlongs.last.wlong end %></a></td>
-	 							    <td><%= text_field_tag 'garant_summ',con.garant_summ,:class=>"cost_tag" %></td>
-	        						<%= hidden_field_tag 'contrid', con.id  %>
-								    <td><%= text_field_tag 'summ',con.summ,:class=>"cost_tag" %></td>
-								    <td><%= submit_tag("Открыть", class: "btn btn-primary") %></td>
-								    </tr>
-								<% end %>						
-							<% end %>
-						<% end %>
-					<% end %>	
+				<% @broni_today.each do |contract| %>
+					<%= simple_form_for :contract,:url => {controller: "contracts", action: "broni2contract"} do |f| %>
+					    <%= hidden_field_tag 'contract_id', contract.id  %>
+						<tr>
+							<td><%= "#{contract.id}/#{contract.cnum}" %></td>
+							<td><%= if contract.car then "#{contract.car.marca} #{contract.car.gnum}" end %></td>
+							<td><%= if contract.client then "#{contract.client.id} #{contract.client.sname} #{contract.client.name} #{contract.client.fname}" end %></td>
+							<td><%= if contract.user then "#{contract.user.username}" end %></td>
+							<td><%= contract.stdate.to_date.strftime("%d.%m.%Y") %>
+							    <%= f.input :sttime, as: :time , default: Time.parse(Time.now.strftime('%R')), label: false %></td>
+							<td><%= text_field_tag 'enddate', contract.enddate.to_date.strftime("%d.%m.%Y")  %>
+							    <%= f.input :endtime, as: :time , default: Time.parse(Time.now.strftime('%R')), label: false %></td>
+							<td><%= text_field_tag 'wlong', if contract.car.wlongs.last then contract.car.wlongs.last.wlong end %></td>
+	 						<td><%= text_field_tag 'garant_summ',contract.garant_summ,:class=>"cost_tag" %></td>
+							<td><%= text_field_tag 'summ',contract.summ,:class=>"cost_tag" %></td>
+							<td><%= submit_tag("Открыть", class: "btn btn-primary") %></td>
+						</tr>
+					<% end %>							
 				<% end %>
 			</tbody>	
 		</table>
+		</div>
+		</small>
 	<% end %>
 	
-	<% if @fl2 == 1 %>	
+    <% if @broni_tomorrow.count != 0 then %>	
 		<h4 style="color: blue" align="center">Брони в работу на завтра</h4>
+		<div class="table-responsive">	
 		<table id="b1" class="table table-bordered table-condensed table-hover">
 			<thead>
-				<tr>
+				<tr class="info">
 					<th>No</th>
 					<th>Автомобиль</th>
-					<th>Дата начала</th>
-					<th>Время начала</th>
-					<th>Дата окончания</th>
-					<th>Время окончания</th>
+					<th>Клиент</th>
 					<th>Агент</th>
+					<th width="12%">Начало</th>
+					<th width="12%">Конец</th>
 					<th>Пробег</th>
 					<th>Гарантийная сумма</th>
 					<th>Сумма договора</th>
@@ -66,74 +64,70 @@
 				</tr>
 			</thead>
 			<tbody>			
-				<% @cars.each do |mobil| %>
-					<% mobil.contracts.each do |con|%>		
-						<% if con.order_date.to_date == Date.tomorrow.to_date %>
-						    <% if con.flag == 1%>
-						        <%= form_tag '/rez_to_contract' do %>
-									<tr>
-									<td><%= con.id %></td>
-									<td><%= mobil.marca + " " + mobil.gnum%></td>
-									<td><%= Date.today.to_date.strftime("%d.%m.%Y") %></td>
-									<td><%= text_field_tag 'sttime', Time.now.strftime('%R') %></td>
-									<td><%= text_field_tag 'enddate', con.diff %></td>
-									<td><%= text_field_tag 'endtime', Time.now.strftime('%R') %></td>
-									<td><%= con.user %></td>
-									<td><a style="color: red"><%= text_field_tag 'wlong', if mobil.wlongs.last then mobil.wlongs.last.wlong end %></a></td>
-	 							    <td><%= text_field_tag 'garant_summ',con.garant_summ,:class=>"cost_tag" %></td>
-	        						<%= hidden_field_tag 'contrid', con.id  %>
-								    <td><%= text_field_tag 'summ',con.summ,:class=>"cost_tag" %></td>
-								    <td><%= submit_tag("Открыть", class: "btn btn-primary") %></td>
-								    </tr>
-								<% end %>						
-							<% end %>
-						<% end %>
-					<% end %>	
+				<% @broni_tomorrow.each do |contract| %>
+					<%= simple_form_for :contract,:url => {controller: "contracts", action: "broni2contract"} do |f| %>
+					    <%= hidden_field_tag 'contract_id', contract.id  %>
+						<tr>
+							<td><%= "#{contract.id}/#{contract.cnum}" %></td>
+							<td><%= if contract.car then "#{contract.car.marca} #{contract.car.gnum}" end %></td>
+							<td><%= if contract.client then "#{contract.client.id} #{contract.client.sname} #{contract.client.name} #{contract.client.fname}" end %></td>
+							<td><%= if contract.user then "#{contract.user.username}" end %></td>
+							<td><%= contract.stdate.to_date.strftime("%d.%m.%Y") %>
+							    <%= f.input :sttime, as: :time , default: Time.parse(Time.now.strftime('%R')), label: false %></td>
+							<td><%= text_field_tag 'enddate', contract.enddate.to_date.strftime("%d.%m.%Y")  %>
+							    <%= f.input :endtime, as: :time , default: Time.parse(Time.now.strftime('%R')), label: false %></td>
+							<td><%= text_field_tag 'wlong', if contract.car.wlongs.last then contract.car.wlongs.last.wlong end %></td>
+	 						<td><%= text_field_tag 'garant_summ',contract.garant_summ,:class=>"cost_tag" %></td>
+							<td><%= text_field_tag 'summ',contract.summ,:class=>"cost_tag" %></td>
+							<td><%= submit_tag("Открыть", class: "btn btn-primary") %></td>
+						</tr>
+					<% end %>							
 				<% end %>
 			</tbody>	
 		</table>
-	<% end %>	
-			
-	<% if @fl1 == 2%>	
+		</div>
+	<% end %>
+	
+	<% if @contracts_close_today.count != 0 then %>	
 		<h4 style="color: blue" align="center">Контракты к закрытию на сегодня</h4>
+		<div class="table-responsive">	
 		<table id="b1" class="table table-bordered table-condensed table-hover">
 			<thead>
-				<tr>
+				<tr class="info">
 					<th>No</th>
 					<th>Автомобиль</th>
+					<th>Клиент</th>
+					<th>Агент</th>
 					<th>Дата начала</th>
 					<th>Дата окончания</th>
-					<th>Время окончания</th>
+					<th width="12%">Время окончания</th>
 					<th>Пробег</th>
-					<th>Агент</th>
 					<th></th>
 				</tr>
 			</thead>
 			<tbody>
-				<% @cars.each do |mobil| %>
-					<% mobil.contracts.each do |con|%>
-						<% if con.diff.to_date == Date.today.to_date %>
-							<% if con.flag == 2%>
-								<%= form_tag '/contract_to_arh' do %>
-									<%= hidden_field_tag 'contrfid', con.id  %>
-									<tr>
-									<td><%= link_to con.id,  contract_path(con,:format => "doc")%></td>
-									<td><%= mobil.marca + " " + mobil.gnum%></td>
-									<td><%= con.order_date.to_date.strftime("%d.%m.%Y") %></td>
-									<td><%= con.diff %></td>
-									<td><%= text_field_tag "fendtime",Time.now.strftime('%R'),:class=>"cost_tag"  %></td>
-									<td><a  style="color: red"><%= text_field_tag 'wlongend', if mobil.wlongs.last then mobil.wlongs.last.wlong end	%></a></td>
-							        <td><%= con.user %></td>
-									<td><%= submit_tag("Закрыть", class: "btn btn-primary") %></td>
-									</tr>
-								<% end %>
-							<% end %>
-						<% end %> 
-					<% end %>	
-				<% end %>
+				<% @contracts_close_today.each do |contract| %>
+					<%= simple_form_for :contract,:url => {controller: "contracts", action: "contract2arh"} do |f|%>
+					    <%= hidden_field_tag 'contract_id', contract.id  %>
+					    <tr>
+							<td><%= link_to "#{contract.id}/#{contract.cnum}",  contract_path(contract) %></td>
+							<td><%= if contract.car then "#{contract.car.marca} #{contract.car.gnum}" end %></td>
+							<td><%= if contract.client then "#{contract.client.id} #{contract.client.sname} #{contract.client.name} #{contract.client.fname}" end %></td>
+							<td><%= if contract.user then "#{contract.user.username}" end %></td>
+							<td><%= contract.stdate.strftime("%d.%m.%Y") %></td>
+							<td><%= contract.enddate.strftime("%d.%m.%Y") %></td>
+							<td><%= unless contract.endtime.nil? then " #{contract.endtime.strftime('%R')}" else "" end %>
+							    <%= f.input :fendtime, as: :time , default: Time.parse(Time.now.strftime('%R')), label: "по факту" %></td>
+							<td><%= unless contract.car.wlongs.last.nil? then "#{contract.car.wlongs.last.wlong}" else "" end %>
+								<%= f.input :wlongend, as: :integer, label: "по факту",:input_html => { :size => 10, :value => if contract.car.wlongs.last then "#{contract.car.wlongs.last.wlong}" end } %></td>
+							<td><%= submit_tag("Закрыть", class: "btn btn-primary") %></td>
+						</tr>
+					<% end %> <!-- form_tag-->
+				<% end %>  <!-- each -->
 			</tbody>	
-		</table>	
-	<% end %>
+		</table>
+		</div>	
+	<% end %>	
 			
 	<h4 align="center">Текущие брони и контракты по машинам <% if @filter==1 then %><span class="glyphicon glyphicon-filter" aria-hidden="true"></span><% end %></h4>
 	
@@ -190,20 +184,23 @@
 						<% reportitem.each do |r| %>	
 							<tr>
 							<td><center><%= r[0] %></center></td>
-							<td><%= link_to "#{r[1]}", car_path(r[daycount+2]) %></td>
+							<td><%= link_to "#{r[1]}", edit_car_path(:id => r[daycount+2]) %></td>
 							<% (0..(daycount-1)).each do |d| %>
-								<td title="<%= (@months[i-1]).change(day: (d+1)).to_formatted_s(:dday_month_year) %>" 
-									               id=<%= case when (r[d+2]==1) then "bbroni" when (r[d+2]==2) then "ccontract" else "zzz" end %>  
-								                   class=<%= case when (r[d+2]==1) then "danger" 
-									               when (r[d+2]==2) then "info" 
-									               when (r[d+2]==3) then "success"
+								<td title="<%= (@months[i-1]).change(day: (d+1)).to_formatted_s(:dday_month_year) + case when (!r[d+2].nil?) then "#{r[d+2][:client]} #{r[d+2][:contract]}" else "" end %>" 
+									               id=<%= case when (!r[d+2].nil? and r[d+2][:flag]==1) then "bbroni" when (!r[d+2].nil? and r[d+2][:flag]==2) then "ccontract" else "zzz" end %>  
+								                   class=<%= case when (!r[d+2].nil? and r[d+2][:flag]==1) then "danger" 
+									               when (!r[d+2].nil? and r[d+2][:flag]==2) then "info" 
+									               when (!r[d+2].nil? and r[d+2][:flag]==3) then "success"
 									               when (titleitem[d+2]==1) then "danger"
 									               when (titleitem[d+2]==2) then "warning" 	 	 
 									               else "" end %>>
 								<center>
-								<% case (r[d+2]) when 1 then %><b><%= link_to "Б" , '#', id: "bbroni" %></b>
-								<%               when 2 then %><b><%= link_to "К", '#', id: "ccontract" %></b>
-								<%               when 3 then %><b><%= link_to "X", '#', id: "rezerv" %></b>
+								<% if !r[d+2].nil? then %>	
+									<% case (r[d+2][:flag]) when 1 then %><b><%= link_to "Б" , contracts_edit_path(:id => r[d+2][:contract_id]), id: "bbroni" %></b>
+									<%               when 2 then %><b><%= link_to "К", contracts_edit_path(:id => r[d+2][:contract_id]), id: "ccontract" %></b>
+									<%               when 3 then %><b><%= link_to "X", '#', id: "rezerv" %></b>
+									<% end %>
+								<% else %><b><%= link_to ".", contracts_newbroni_path(:car_id => r[daycount+2], :stdate => (@months[i-1]).change(day: (d+1)).to_formatted_s(:dday_month_year)), id: "vacant" %></b>
 								<% end %>
 								</center>
 							    </td>
