--- a/app/views/cparams/show.html.erb
+++ b/app/views/cparams/show.html.erb
@@ -5,7 +5,9 @@
   	  	<div class="panel-body">
 		<%= simple_form_for(:cparam, url: cparams_path, html: { class: 'form-inline' }) do |f| %>
 		  <%= f.input :curs, label: 'Курс EUR ', placeholder: @cparam, as: :decimal %>
-		  <%= button_tag "Сохранить", type: 'submit', class: "btn btn-default glyphicon glyphicon-ok pull-center" %>  
+		  <div  align="center"><%= button_tag "Сохранить", type: 'submit', class: "btn btn-primary glyphicon glyphicon-ok pull-center" %>
+		  	                   <%= button_tag "Отмена", type: 'submit', class: "btn btn-warning glyphicon glyphicon-remove pull-center", name: "cancel" %>  
+          </div>  
 		<% end %>
 	  </div> <!--panel-body--->    
 	</div> <!--panel--> 
